# Indicators

./: .gitignore  Indicators.code-workspace  Makefile.mk  README.ME  README.md  pyproject.toml  python_env.yml
data/imported/: times.csv
data/tmp/: 2_semantic.json  semantic.json
data/tmp/reports/: 3_summary_all.csv  3_summary_nonsemantic_indicators.csv  3_summary_semantic_indicator.csv  3_times.csv  semantic.json  summary_all.csv  summary_nonsemantic_indicators.csv  summary_semantic_indicators.csv  times.json
doc/comparaison/: utiles.py
doc/comparaison/ADD_Labnbook/: ACP_Classification.ipynb  ADD_Labnbook.ipynb  ADD_Labnbook_v1.ipynb  ADD_Labnbook_v2.ipynb  ADD_Labnbook_v3.ipynb  ADD_Labnbook_v3_broullion.ipynb  ADD_Labnbook_v4_brouillon.ipynb  comparaison.csv  comparaison.ipynb  comparaison.xlsx  data.csv  data.xlsx  data_final_kmeans.csv  data_final_kmeans.xlsx  generate_data.ipynb
doc/comparaison/ADD_Labnbook_new_indicators/: ADD_Labnbook_new_indicators.ipynb  data.csv  data.xlsx  generate_data.ipynb
doc/questionnaire/: labdoc_viz.ipynb
doc/questionnaire_v1/: RESUME copie.numbers  RESUME.numbers  analyse_questionnaire.docx  boxplot_data.csv  boxplot_data.ipynb  indicators_val.csv  indicators_values.numbers  results-survey171218.csv  results-survey171218.numbers  statistic-survey171218 2.numbers  statistic-survey171218 2.xlsx  strategies.csv  summary_fuzzy.csv  tab1.csv  teachers.csv
doc/questionnaire_v1/.ipynb_checkpoints/: labdoc_viz-checkpoint.ipynb
doc/questionnaire_v1/iframe_figures/: figure_107.html  figure_108.html  figure_109.html  figure_124.html  figure_125.html  figure_127.html  figure_14.html  figure_15.html  figure_16.html  figure_17.html  figure_20.html  figure_21.html  figure_22.html  figure_23.html  figure_24.html  figure_25.html  figure_26.html  figure_27.html  figure_28.html  figure_29.html  figure_33.html  figure_38.html  figure_39.html  figure_40.html  figure_41.html  figure_42.html  figure_43.html
doc/questionnaire_v1/labdocs_vizu/: labdoc_1.html  labdoc_10.html  labdoc_11.html  labdoc_12.html  labdoc_2.html  labdoc_3.html  labdoc_4.html  labdoc_5.html  labdoc_6.html  labdoc_7.html  labdoc_8.html  labdoc_9.html  labdoc_membership_degrees.html  labdoc_radius.html  teachers_labdocs_radius.html  teachers_labdocs_radius_sr.html
doc/questionnaire_v2/: indicators_val.csv  labdoc_viz.ipynb  results-survey_all.csv  results-survey_ind_val.csv  teachers.csv
doc/questionnaire_v2/.ipynb_checkpoints/: generate_data_true-checkpoint.ipynb  labdoc_viz-checkpoint.ipynb
doc/questionnaire_v2/data/: partie_II_results.numbers  radius_rmsd_teacher.csv  rmsd_ld.csv  rmsd_ld.numbers
doc/questionnaire_v2/data/tables_indic/: Feuille 1-Balance of contribution.csv  Feuille 2-Balance of coecriture.csv  tables_indic.numbers
doc/questionnaire_v2/data/tables_indic/tables_indic/: Feuille 1-Balance of contribution.csv  Feuille 2-Co-writing.csv  Feuille 3-strategie.csv  Feuille 4-Both indicators.csv
doc/questionnaire_v2/doc/: Anis_Proposition article.docx  Structuration_V28-10_Anis_CH.pages
doc/questionnaire_v2/labdocs_vizu/: labdoc_1.html  labdoc_10.html  labdoc_11.html  labdoc_12.html  labdoc_2.html  labdoc_3.html  labdoc_4.html  labdoc_5.html  labdoc_6.html  labdoc_7.html  labdoc_8.html  labdoc_9.html  labdoc_membership_degrees.html  labdoc_radius.html  teachers_labdocs_radius.html  teachers_labdocs_radius_sr.html
doc/questionnaire_v2/structuration/: Proposition article.pages  Structuration_V28-10_Anis_CH.docx
doc/sim_diapo/: diapo.md
doc/sim_diapo/export/: white.css
doc/sim_diapo/export_diapo_indicateur_sem/: index.html
scripts/: Dashboard.py  flow_0.py  flow_1.py  flow_2.py  flow_3.py  run_flows.py  test.py  viz copy.py
scripts/utils/: components.py  diff.py  utils.py
tests/notebooks/: FlauBert.ipynb  correlation.ipynb  test.ipynb  test.py
